force-app/main/default/objects/Payment__c/fields/Admission_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Admission_Fee_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Admission Fee Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>