force-app/main/default/objects/Payment__c/fields/Admission_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Admission_Fee_Balance__c</fullName>
    <formula>Admission_Fee_Amount__c -  Admission_Fee_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admission Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>