force-app/main/default/objects/Payment__c/fields/Convenor_University_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Convenor_University_Fee_Balance__c</fullName>
    <formula>Convenor_University_Fee__c -  Convenor_University_Fee_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>University Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>