force-app/main/default/objects/Payment__c/fields/Exam_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Exam_Fee_Balance__c</fullName>
    <formula>IF(RecordType.Name =&apos;Management&apos;, Management_Exam_Fee__c- Management_Exam_Fee_Paid__c, Convenor_Exam_Fee__c - Convenor_Exam_Fee_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>