force-app/main/default/objects/Payment__c/fields/Management_Exam_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Management_Exam_Fee_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exam Fee Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>