force-app/main/default/objects/Payment__c/fields/Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Management Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>