force-app/main/default/objects/Payment__c/fields/Management_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Balance__c</fullName>
    <formula>Management_Fee__c -  Management_Fee_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>