force-app/main/default/objects/Payment__c/fields/Other_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Balance__c</fullName>
    <formula>IF(RecordType.Name =&apos;Management&apos;, Management_Other_Fee__c - Management_Other_Fee_Paid__c,Convenor_Other_Fee__c-Convenor_Other_Fee_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>