force-app/main/default/objects/Payment__c/fields/Special_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Special_Fee_Balance__c</fullName>
    <formula>Special_Fee_Amount__c -  Special_Fee_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>