force-app/main/default/objects/Payment__c/fields/Student_Hall_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Student_Hall_Ticket_No__c</fullName>
    <label>Student Hall Ticket No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>