force-app/main/default/objects/Payment__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <formula>IF( RecordType.Name =&apos;Management&apos;, Management_Fee_Paid__c+Management_Exam_Fee_Paid__c+Management_Other_Fee_Paid__c+Management_Transport_Fee_Paid__c, Admission_Fee_Paid__c+ Special_Fee_Paid__c+ Tution_Fee_Paid__c+Convenor_Other_Fee_Paid__c+Convenor_Exam_Fee_Paid__c+Convenor_Transport_Fee_Paid__c+Convenor_University_Fee_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>