force-app/main/default/objects/Payment__c/fields/Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance__c</fullName>
    <formula>IF( RecordType.Name =&apos;Management&apos;, Management_Fee_Balance__c+Exam_Fee_Balance__c+Other_Fee_Balance__c+Transport_Fee_Balance__c, Admission_Fee_Balance__c+Exam_Fee_Balance__c+Other_Fee_Balance__c+Special_Fee_Balance__c+Transport_Fee_Balance__c+Tution_Fee_Balance__c+Convenor_University_Fee_Balance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>