force-app/main/default/objects/Payment__c/fields/Total_fee__c.field-meta.xml
<CustomField>
    <fullName>Total_fee__c</fullName>
    <formula>IF(RecordType.Name =&apos;Management&apos; , Management_Exam_Fee__c+Management_Other_Fee__c+Management_Fee__c+Management_Transport_Fee__c, Admission_Fee_Amount__c+ Special_Fee_Amount__c+ Tution_Fee_Amount__c+Convenor_Exam_Fee__c+Convenor_Transport_Fee__c+Convenor_Other_Fee__c+Convenor_University_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>