force-app/main/default/objects/Payment__c/fields/Transport_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Transport_Fee_Balance__c</fullName>
    <formula>IF(RecordType.Name =&apos;Management&apos;, Management_Transport_Fee__c- Management_Transport_Fee_Paid__c,Convenor_Transport_Fee__c -  Convenor_Transport_Fee_Paid__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>