force-app/main/default/objects/Payment__c/fields/Tution_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Tution_Fee_Balance__c</fullName>
    <formula>Tution_Fee_Amount__c -  Tution_Fee_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tution Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>