force-app/main/default/objects/Payment__c/recordTypes/Convenor_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Convenor_Record_Type</fullName>
    <active>true</active>
    <label>Convenor</label>
</RecordType>