force-app/main/default/objects/Payment__c/recordTypes/Management_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Management_Record_Type</fullName>
    <active>true</active>
    <label>Management</label>
</RecordType>