force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Student_Hall_Ticket_No__c</columns>
    <columns>Admission_Fee_Amount__c</columns>
    <columns>Admission_Fee_Paid__c</columns>
    <columns>Tution_Fee_Amount__c</columns>
    <columns>Tution_Fee_Paid__c</columns>
    <columns>Special_Fee_Amount__c</columns>
    <columns>Special_Fee_Paid__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Admission_Fee_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>